stop close,max,min, and restore buttons clipping over tab underline

--- a/src/Base/Base.scss
+++ b/src/Base/Base.scss
@@ -27,14 +27,17 @@
   }
 }
 
-// fix for close button color
-.titlebar-close:hover {
-  background-color: rgb(193, 42, 28) !important;
-  stroke: rgb(250, 238, 237) !important;
-}
-
 #TabsToolbar {
   z-index: 1;
+
+  .titlebar-buttonbox-container {
+    height: calc(100% - 1px);
+
+    .titlebar-close:hover {
+      background-color: rgb(193, 42, 28) !important;
+      stroke: rgb(250, 238, 237) !important;
+    }
+  }
 
   #tabbrowser-arrowscrollbox {
     max-height: var(--tab-min-height);
